--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,77 +1,93 @@
 @import "https://fonts.googleapis.com/css?family=Montserrat&display=swap";
 
+$d1: 1rem;
+
+%round-box {
+  border-radius: 0.3rem;
+}
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  body {
-    font-family: "Montserrat", sans-serif;
-    background: hsl(0, 0%, 5%);
-    color: hsl(0, 0%, 95%);
-    height: 90vh;
-    padding: 2rem 1rem 1rem 1rem;
-    display: flex;
-    flex-direction: column;
-    letter-spacing: 0.07rem;
-    line-height: 1.5;
-  }
-  form {
-    display: flex;
-    margin-top: auto;
-  }
-  form input {
-    font-size: 1.2rem;
-    border: 0;
-    padding: 0.7rem;
-    color: #364e56;
-    background: hsl(195, 30%, 80%);
-    margin-right: 1rem;
-    width: 70%;
-    flex-grow: 1;
-  }
-  form button {
-    font-size: 1rem;
-    font-weight: 800;
-    color: hsl(194, 29%, 80%);
-    background-color: hsl(195, 30%, 25%);
-    border: none;
-    padding: 0.5rem 1rem;
-    flex-grow: 0.1;
-  }
-  #messages {
-    list-style-type: none;
-    margin-bottom: 1rem;
-    padding: 0;
-    overflow-y: scroll;
-  }
-  #messages li {
-    padding: 1rem 1rem;
-    margin-bottom: 1rem;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+  background: hsl(0, 0%, 5%);
+  color: hsl(0, 0%, 95%);
+  height: 90vh;
+  padding: $d1;
+  display: flex;
+  flex-direction: column;
+  letter-spacing: 0.07rem;
+  line-height: 1.5;
+}
+
+form {
+  display: flex;
+  margin-top: auto;
+}
+
+form input {
+  @extend %round-box;
+  font-size: 1rem;
+  border: 0;
+  padding: 0.7rem;
+  color: #364e56;
+  background: hsl(195, 30%, 80%);
+  margin-right: $d1;
+  width: 70%;
+  flex-grow: 1;
+}
+
+form button {
+  @extend %round-box;
+  font-size: 0.8rem;
+  font-weight: 800;
+  color: hsl(194, 29%, 80%);
+  background-color: hsl(195, 30%, 25%);
+  border: none;
+  padding: 0 $d1;
+  line-height: 3 * $d1;
+  flex-grow: 0.1;
+}
+
+#messages {
+  list-style-type: none;
+  margin-bottom: $d1;
+  padding: 0;
+  overflow-y: scroll;
+
+  li {
+    @extend %round-box;
+    padding: $d1;
+    margin-bottom: $d1;
     background: hsl(0, 0%, 10%);
+
+    &.hidden {
+      display: none;
+    }
+
+    &.done {
+      p {
+        text-decoration: line-through;
+      }
+    }
+
+    small {
+      font-size: 0.75rem;
+      display: block;
+      color: #8d9a9e;
+    }
+
+    p {
+      color: #71bacc;
+      letter-spacing: 0.1rem;
+    }
   }
 
-  #messages li:nth-child(odd) {
+  li:nth-child(odd) {
     background: hsl(0, 0%, 20%);
   }
-
-  #messages li small {
-    font-size: 0.75rem;
-    display: block;
-    color: #8d9a9e;
-  }
-
-  #messages li p {
-    color: #71bacc;
-    letter-spacing: 0.1rem;
-  }
-
-  .rounded {
-    border-radius: 0.3rem;
-  }
-  .done p {
-    text-decoration: line-through;
-  }
-  .hidden {
-    display: none;
-  }
+}
