--- a/src/_config.scss
+++ b/src/_config.scss
@@ -1,5 +1,30 @@
 @mixin mediaLg {
-  @media (min-width: 45rem) {
+  @media (min-width: 40rem) {
     @content;
+  }
+}
+
+@mixin mediaMd {
+  @media (min-width: 30rem) {
+    @content;
+  }
+}
+
+@mixin buttonVariant($background-color) {
+  background-color: $background-color;
+
+  &:hover {
+    /* mobile: onhold release color */
+    background-color: darken($background-color, 5%);
+  }
+
+  &:active {
+    /* mobile: onclick color */
+    background: darken($background-color, 10%);
+  }
+
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 1px 3px fade-out(lighten($background-color, 40%), 0.3);
   }
 }
