--- a/src/styles.scss
+++ b/src/styles.scss
@@ -163,7 +163,7 @@ form {
 
     ul {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(6rem, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(6rem, 1fr));
       gap: 0.5 * $d1;
       list-style-type: none;
 
